# Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS =               -I config
CONFIG_STATUS_DEPENDENCIES =    META
EXTRA_DIST =                    META AUTHORS COPYING ChangeLog DISCLAIMER \
                                INSTALL NEWS README io-watchdog.spec
SUBDIRS =                       src tests

distclean-local:
	-rm -fr autm4te*.cache autoscan.* aclocal.m4
